Add Microsoft token auto-refresh